Make sure that actor draggable names which aren't disabled have a higher z-index than those which are

--- a/app/assets/stylesheets/namegame.css
+++ b/app/assets/stylesheets/namegame.css
@@ -1,3 +1,7 @@
+/* Fonts */
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 .loader {
   display: none;
   height: 15px;
@@ -14,6 +18,7 @@
 
 body {
   text-shadow: 2px 2px rgba(33, 0, 255, 0.08);
+  font-family: "Open Sans";
 }
 
 
@@ -23,7 +28,7 @@ body {
   text-transform: uppercase;
   text-shadow: 0px 1px 1px #4D4D4D;
   color: #222;
-  font: 2.5em "LeagueGothicRegular";
+  font-size: 2.25em;
   line-height: 1em;
   margin-bottom: 0;
 
@@ -59,12 +64,20 @@ section.playingfield, section.movieposter {
         -ms-animation: fadein 3s; /* Internet Explorer */
          -o-animation: fadein 3s; /* Opera < 12.1 */
             animation: fadein 3s;
+  z-index: 1;
 }
 
 .draggable {
-
   box-shadow: 1px 1px 4px rgba(125, 125, 255, 0.5);
+  height: auto;
 }
+.ui-draggable {
+  z-index: 20;
+}
+.ui-draggable-disabled {
+  z-index: 10;
+}
+
 
 .draggable span {
   display: inline-block;
